--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p></p>
                 </div>
             </div>
-            <img src="/images/image2.jpg" alt="">
+            <img src="images/image2.jpg" alt="">
         </div>
     </section>
     <!--==========================Project  Section==========================-->
@@ -102,7 +102,7 @@
         <div class="projects-grid">
 
             <div class="project-card">
-                <img src="/images/project1.png" alt="projectone">
+                <img src="images/project1.png" alt="projectone">
                 <h3>Project 1</h3>
                 <p>This is my First ever project. It's a Clone of Youtube!</p>
                 <div class="btn-group">
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="/images/project2.png" alt="projecttwo">
+                <img src="images/project2.png" alt="projecttwo">
                 <h3>Project 1</h3>
                 <p>This is my second Project.It's a Philip Van Heusen Website Clone!</p>
                 <div class="btn-group">
